# proj_flash_match

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  flashmatch.cpp  flashmatch.hpp  lock_free_queue.cpp  main.cpp  tmp.txt
.github/workflows/: ci.yml
datasets/: README.md  generate_data.py  generate_data_batches.py  generate_orderbook.py  requirements.txt
include/flashmatch/: benchmark.hpp  high_perf_csv_parser.hpp  lock_free_queue.hpp  matching_engine.hpp  order_book.hpp  order_queue.hpp
include/lock_free_queue/: lock_free_queue.hpp  lock_free_queue.ipp
include/types/: order.hpp  ordertype.hpp  side.hpp  trade.hpp
proto/: order_gateway.grpc.pb.cc  order_gateway.grpc.pb.h  order_gateway.pb.cc  order_gateway.pb.h  order_gateway.proto
scripts/: run_bench.sh
src/: benchmark.cpp  flashmatch.cpp  lock_free_queue.cpp  main.cpp  matching_engine.cpp  order_book.cpp  order_gateway_client.cpp  order_gateway_server.cpp  streaming_csv_reader.cpp
tests/: CMakeLists.txt  benchmark_test.cpp  test_lock_free_queue.cpp  test_main.cpp  test_matching_engine.cpp  test_order_book.cpp  test_order_gateway.cpp
